--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
   "name": "mangadex-offline",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "electron app to download and read mangadex mangas offline",
+  "main": "src/electronStarter.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "build-dev": "electron-builder . -c.compression=store",
+    "clean-build": "rm -rf dist; electron-builder .",
+    "ship": "git push && build --win -p always"
   },
-  "keywords": [],
-  "author": "",
+  "author": "mahhov1",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "env-paths": "^2.2.0"
+    "electron": "^11.2.1",
+    "env-paths": "^2.2.0",
+    "xx-element": "^3.0.1"
+  },
+  "build": {
+    "asar": false,
+    "artifactName": "${name}-${version}-${os}-${arch}.${ext}",
+    "files": [
+      "resources",
+      "src"
+    ],
+    "icon": "./resources/headphones-alt-solid-512.png",
+    "linux": {
+      "target": "AppImage"
+    }
   }
 }
